# XoxdWM

./: .gitignore  CHANGELOG.md  README.md  flake.nix  justfile
.github/workflows/: cache-warm.yml  chapel-ci.yml  ci.yml  multi-arch.yml  native-deps.yml  nix-cache.yml  packaging.yml  rocky-test.yml  runner-health.yml  self-hosted-fast.yml  vr-hardware.yml
analysis/: Mason.toml
analysis/examples/: DualSocketDemo.chpl
analysis/src/: BciAnalysis.chpl
analysis/test/: TestSpectral.chpl
archive/spike/hello-compositor/: Cargo.toml  README.md
archive/spike/hello-compositor/src/: main.rs
compositor/: Cargo.toml
compositor/src/: config.rs  lib.rs  state.rs
compositor/src/backend/: drm.rs
compositor/src/handlers/: compositor.rs  data_control.rs  dmabuf.rs  dpms.rs  idle.rs  mod.rs  output_management.rs  pointer_constraints.rs  screencopy.rs  seat.rs  session_lock.rs  xdg_activation.rs
compositor/src/ipc/: dispatch.rs
compositor/src/vr/: beyond_hid.rs  capture_visibility.rs  eye_capture.rs  eye_tracking.rs  follow_mode.rs  gpu_power.rs  mod.rs  openxr_state.rs  overlay.rs  pupil_detect.rs  radial_menu.rs  stub.rs  texture.rs  transient_3d.rs  vr_renderer.rs
docs/: app-compatibility.md  developer-guide.md  feature-matrix.md  ipc-protocol.md  module-classification.md  storage-architecture.md
docs/research/: beyond-2e-bootstrap-analysis.md  beyond-2e-bootstrap-plan.md  beyond-amd-kernel-patches.md  compositor-choice.md  fpga-dsc-verification.md  kernel-xr-boot-analysis.md  kernel-xr-boot-root-cause.md  t7810-smi-baseline.md  upstream-qp-rc-submission.md  v0.5.0-roadmap-plan.md  v0.6.0-plan.md
lisp/core/: exwm-xsettings.el
lisp/ext/: ewwm-ext.el
patches/: amd-bsb-dsc-fix.patch  bigscreen-beyond-edid.patch  wlroots-bigscreen-non-desktop.patch
test/: ewwm-audio-test.el  ewwm-vr-beyond-test.el  phase1-protocols-test.el  phase2-daily-use-test.el  phase2-protocols-test.el  phase3-overlay-test.el  phase3-remaining-test.el  phase3-vr-patterns-test.el  v050-vr-renderer-test.el  week17-integration-test.el  week18-integration-test.el  week20-integration-test.el  week7-integration-test.el
(+110 files in other folders)
