[package]
name = "ewwm-compositor"
version = "0.5.0"
edition = "2021"
publish = false
description = "EXWM-VR Wayland compositor built on Smithay"
license = "GPL-3.0-or-later"

[[bin]]
name = "ewwm-compositor"
path = "src/main.rs"

[features]
default = ["full-backend"]
full-backend = [    # enables DRM/winit backends (requires libseat, libinput, DRM, udev)
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_libinput",
    "smithay/backend_session_libseat",
    "smithay/backend_udev",
    "smithay/backend_winit",
]
vr = ["openxrs", "glow", "khronos-egl"]    # enables OpenXR VR runtime + GL rendering

[dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "desktop",
    "renderer_gl",
    "wayland_frontend",
    "xwayland",
] }
calloop = { version = "0.14", features = ["signals"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bitflags = "2"
xkbcommon = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
lexpr = "0.2"
libc = "0.2"

# VR: OpenXR runtime integration (behind "vr" feature flag)
openxrs = { package = "openxr", version = "0.21", optional = true }
glow = { version = "0.16", optional = true }
khronos-egl = { version = "6", features = ["dynamic"], optional = true }

[dev-dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
